# ot-nrf528xx

./: .gitmodules  CMakeLists.txt  ms88sf2pi_config.h
nrf_802154_sl_platform/: CMakeLists.txt  tick.c
script/: build
src/: CMakeLists.txt
src/nrf52840/: arm-none-eabi.cmake
src/src/: alarm.c  entropy.c  fem.c  radio.c  temp.c
src/src/transport/: uart.c
